feat: initial project structure with CI/CD pipeline